[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/character/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/character/collision_tile/CollisionTile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/ui/gui/GUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/character/player/bullet/Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/music/Wasted in outta Space App version.wav" type="AudioStream" id=6]
[ext_resource path="res://Scenes/ui/how_to_play/HowToPlay.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/ui/main_menu/MainMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/ui/shop/Shop.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/ui/OverallGUI.gd" type="Script" id=10]
[ext_resource path="res://Scenes/ui/score_balance/PlayerScoreBalance.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/ui/sound_toggle/SoundButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/ui/version_tag/VersionTag.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/network/WiosClient.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/ui/startup/Startup.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/ui/shop/ShopButton.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/ui/highscores/Highscores.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/ui/credits/Credits.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/ui/InGameBackground.tscn" type="PackedScene" id=20]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -36.3195, 1.46259, 0, 0, 0, 0, 1022.2, 1.34554 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Tile = ExtResource( 3 )
Bullet = ExtResource( 5 )

[node name="InGameBackground" parent="." instance=ExtResource( 20 )]

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="Music" type="AudioStreamPlayer" parent="GUI"]
stream = ExtResource( 6 )

[node name="Highscores" parent="GUI" instance=ExtResource( 17 )]
visible = false

[node name="Startup" parent="GUI" instance=ExtResource( 15 )]

[node name="GUI" parent="GUI" instance=ExtResource( 4 )]
visible = false

[node name="PlayerScoreBalance" parent="GUI" instance=ExtResource( 11 )]
visible = false
margin_right = -1171.0
margin_bottom = -677.0

[node name="Shop" parent="GUI" instance=ExtResource( 9 )]
visible = false

[node name="MainMenu" parent="GUI" instance=ExtResource( 8 )]
visible = false

[node name="ShopButton" parent="GUI" instance=ExtResource( 16 )]
visible = false

[node name="Credits" parent="GUI" instance=ExtResource( 18 )]
visible = false

[node name="SoundButton" parent="GUI" instance=ExtResource( 12 )]

[node name="VersionTag" parent="GUI" instance=ExtResource( 13 )]
margin_top = -50.0
margin_right = 163.0
version = "2.0 - beta"

[node name="HowToPlay" parent="GUI" instance=ExtResource( 7 )]
visible = false

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -1.18921, 0 )
scale = Vector2( 0.5, 0.5 )

[node name="WiosClient" parent="." instance=ExtResource( 14 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 480 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -36.3195, 1.46259 )
rotation = -0.000110607
[connection signal="go_back" from="GUI/Highscores" to="GUI" method="go_to_main_menu"]
[connection signal="login" from="GUI/Startup" to="." method="login"]
[connection signal="register" from="GUI/Startup" to="." method="register"]
[connection signal="main_menu" from="GUI/GUI" to="GUI" method="go_to_main_menu"]
[connection signal="play_again" from="GUI/GUI" to="GUI" method="start_game"]
[connection signal="play_again" from="GUI/GUI" to="." method="_on_MainMenu_start_game"]
[connection signal="buy_item" from="GUI/Shop" to="." method="buy_item"]
[connection signal="go_back" from="GUI/Shop" to="GUI" method="go_to_main_menu"]
[connection signal="show_highscores" from="GUI/MainMenu" to="." method="show_highscores"]
[connection signal="show_how_to_play" from="GUI/MainMenu" to="GUI" method="show_how_to_play"]
[connection signal="start_game" from="GUI/MainMenu" to="GUI" method="start_game"]
[connection signal="start_game" from="GUI/MainMenu" to="." method="_on_MainMenu_start_game"]
[connection signal="open_shop" from="GUI/ShopButton" to="GUI" method="_on_ShopButton_open_shop"]
[connection signal="sound_off" from="GUI/SoundButton" to="GUI" method="_on_SoundButton_sound_off"]
[connection signal="sound_on" from="GUI/SoundButton" to="GUI" method="_on_SoundButton_sound_on"]
[connection signal="show_credits" from="GUI/VersionTag" to="GUI" method="show_credits"]
[connection signal="go_back" from="GUI/HowToPlay" to="GUI" method="go_to_main_menu"]
[connection signal="ammo_change" from="Player" to="GUI/GUI" method="_on_Player_ammo_change"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="inventory_stock_changed" from="Player" to="." method="_on_Player_inventory_stock_changed"]
[connection signal="rage_mode_off" from="Player" to="GUI/GUI" method="_on_Player_rage_mode_off"]
[connection signal="rage_mode_on" from="Player" to="GUI/GUI" method="_on_Player_rage_mode_on"]
[connection signal="shoot_bullet" from="Player" to="." method="_on_Player_shoot_bullet"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
